2003-05-13  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtptls.c:
	    Oops, when "HAVE_OPENSSL" is inactive, still supply
	    msg_info() function to be used, as well as  FILE *vlog.

	* libc/strsignal.c:
	    Matching tests with earlier autoconf rewrites

	* configure.in, man/Makefile.in, man/*:
	    Changed ALL man-page files to be autoconf generated
	    so that @MAILBIN@ substitutions (et.al.) can be
	    done into the files.  (Also renamed files in the
	    CVS repository to reflect changed names in order
	    to preserve the change history.)

	* proto/post-install.sh.in:
	    Added '--destdir' option.

	* Makefile.in:
	    DESTDIR value dependent reminder notes referring to
	    "postinstall" tool.

2003-05-10  Matti Aarnio  <mea@zmailer.org>

	* transports/smtp/smtp.c:
	    Increase the timeout_data to 5 minutes by default to
	    match timeout_cmd -- in PIPELINING mode we had a bit
	    too low timeouts..

	* proto/scheduler.conf.in:
	    By default, comment away the "ageorder" flag.
	    When a troublesome message jams the queue, allow
	    the queue to be randomized so that the troublesome
	    message won't stay in its head.

	* smtpserver/policytest.c:
	    From  Andrey Blochintsev <bag@iptelecom.net.ua>:
	
    Is it possible to setup smtp-policy to block
    almost all mail (exept to: abuse@ or to: postmaster@)
    from some networks?

    It seems for me settings like:
	_rbl0          rcpt-dns-rbl      +:dul.maps.vix.com....
	_rbl1          test-rcpt-dns-rbl +
    doing that for RBL-listed network[s], but it is not possible
    to have analogous setup for locally listed (in smtp-policy.*)
    networks.

    The patch below solves this problem.
    To activete you need add rcpt-dns-rbl attributes starting
    with '_' ('_' symbol is not allowed in dns names).

    With this patch settings
	[10.10.10.25]/32      rcpt-dns-rbl "_+"
	[10.10.10.0]/24       rcpt-dns-rbl "_TEST reject msg"
	postmaster@my.domain = _full_rights
    means that: