@@ -211,213 +211,14 @@
 
 #| File:  $MAILVAR/db/smtp-policy.src
 #|
-#|   Policy based filter database boilerplate for smtpserver
-#|   This file is compiled into actual database by command:
+#|  Policy based filter database boilerplate for smtpserver
+#|  This file is compiled into actual database by command:
 #|         $MAILBIN/policy-builder.sh
 #|
-#| Syntax:
 #|
-#| key	[attribute value]... [= _tag]
-#| 
-#| Where:
-#|
-#| 'key' is 
-#|   - a domain name optionally preceded by a dot (.)
-#|   - "user@" / "user@domain" names.
-#|   - an IP address expression in canonical [nn.nn.nn.nn]/prefix form.
-#|	Unspecified bits must be 0. (Network IPv6 addresses containing
-#|       IPv4-mapped addresses are translated into plain IPv4.)
-#|   - any arbitrary word referred as '_tag' at the right side
-#|     '_tag' may be any key of this database
-#| 'attribute' and 'value' are tokens. They are used by policytest() to
-#|     make decisions.  Attribute names, and understood value tokens are:
-#|
-#|	'='		'_any_token_with_starting_underscore' (aliasing)
-#|	'rejectnet'	{ '+', '-' }
-#|	'freezenet'	{ '+', '-' }
-#|	'rejectsource'	{ '+', '-' }
-#|	'freezesource'	{ '+', '-' }
-#|	'relaycustomer'	{ '+', '-' }
-#|	'relaycustnet'	{ '+', '-' }
-#|	'relaytarget'	{ '+', '-' }
-#|	'freeze'	{ '+', '-' }
-#|	'senderokwithdns' { '+', '-' }
-#|	'acceptifmx'	{ '+', '-' }
-#|	'acceptifdns'	{ '+', '-' }
-#|	'sendernorelay' { '+', '-' }
-#|	'test-dns-rbl'	{ '+', '-', "suffix.one:suffix.two" }
-#|	  Sample suffixes: rbl.maps.vix.com  relays.mail-abuse.org
-#|			   dul.maps.vix.com
-#|			   ok.orbs.org:relays.orbs.org  <-- that is a PAIR!
-#|	'rcpt-dns-rbl'	{ '+', '-', "suffix.one:suffix.two" }
-#|	'test-rcpt-dns-rbl' { '+', '-', "suffix.one:suffix.two" }
-#|	'message'	"quoted constant string message"
-#|	'localdomain'	{ '+', '-' }
-#|	'maxinsize'	nnn
-#|	'maxoutsize'	nnn
-#|	'fulltrustnet'	{ '+', '-' }
-#|	'trustrecipients' { '+', '-' }
-#|	'trust-whoson'	{ '+', '-' }
-#|
-#| Semantics:
-#|
-#| The policytest() functions called by smtpserver to check the client host,
-#| the sender's and recipients' addresses.  policytest() looks for name, and
-#| address of client host as well as full and partial user address, and domain
-#| part of sender and recipient addresses in this database.  The retrieved
-#| attributes are used to make decissions on acepting or rejecting the incoming
-#| mail.
-#|
-#| If looking for 'foo.bar.edu' and exact match failed, the database looks keys
-#| in sequence:  '.foo.bar.edu', '.bar.edu', '.edu', and '.'.
-#|
-#| The order of entries in this file is indifferent.
-#|
-#| When searching an IP address the entry with the most common (leftside) bits
-#| is returned. So you can have a [0.0.0.0]/0 entry what specifies the default
-#| addributes for all unlisted IP addresses. (Both IPv4 and IPv6)
-#|
-#| '=' is a special attribute.
-#| The notation '= _tag' means "See also at '_tag'". If server() doesn't
-#| find the requested attribute of the object, it will replace object name
-#| with '_tag' and restarts search.
-#| 
-
-#| Here is an example configuration, assumed the following decision
-#| chains of smtpserver/policytest.c routines:
-#|
-#| Connection establishment:  (IP address tested)
-#|
-#|  if (IP address of SMTP client has 'REJECTNET +' attribute) then
-#|   any further conversation refused
-#|   [state->always_reject = 1; return REJECT;]
-#|  if (IP address of SMTP client has 'FREEZENET +' attribute) then
-#|   we present happy face, but always put the messages into a freezer..
-#|   [state->always_freeze = 1; return FREEZE;]
-#|  if (IP address of SMTP client has 'RELAYCUSTNET +' attribute) then
-#|   sender accepted, recipients not checked
-#|   [state->always_accept = 1; return ACCEPT;]
-#|  if (IP address of SMTP client has 'TEST-DNS-RBL +' attribute) then
-#|   we use RealtimeBlockingList DNS database.  If we get match from
-#|   there, we do: [state->always_reject = 1; return REJECT;]
-#|  else
-#|   return ACCEPT
-#|
-#| Connection extablishment; connection source DOMAIN test
-#| (This is done on the reverser information of the IP address
-#|  of the session source.)
-#|
-#|  if (state->always_reject == 1) return REJECT;
-#|  if (state->always_freeze == 1) return FREEZE;
-#|  if (state->always_accept == 1) return ACCEPT;
-#|
-#|  if (IP address of SMTP client has 'REJECTNET +' attribute) then
-#|   any further conversation refused
-#|   [state->always_reject = 1; return REJECT;]
-#|  if (IP address of SMTP client has 'FREEZENET +' attribute) then
-#|   we present happy face, but always put the messages into a freezer..
-#|   [state->always_freeze = 1; return FREEZE;]
-#|  else
-#|   return ACCEPT
-#|
-#| HELO/EHLO parameter string:
-#|
-#|  if (state->always_reject == 1) return REJECT;
-#|  if (state->always_freeze == 1) return FREEZE;
-#|  if (state->always_accept == 1) return ACCEPT;
-#|
-#|  if (HELO-name of SMTP client has 'REJECTNET +' attribute) then
-#|   any further conversation refused
-#|   [state->always_reject = 1; return REJECT;]
-#|  if (HELO-name of SMTP client has 'FREEZENET +' attribute) then
-#|   we present happy face, but always put the messages into a freezer..
-#|   [state->always_freeze = 1; return FREEZE;]
-#|  default: return ACCEPT
-#|
-#| MAIL FROM address:
-#|
-#|  set state->rcpt_nocheck  = 0;
-#|  set state->sender_reject = 0;
-#|  set state->sender_freeze = 0;
-#|
-#|  if (state->always_reject == 1) return REJECT;
-#|  if (state->always_freeze == 1) return FREEZE;
-#|  if (state->always_accept == 1) return ACCEPT;
-#|
-#|  if (sender's address has 'REJECTSOURCE +' attribute) then
-#|   sender rejected, any further conversation refused
-#|   [state->always_reject = 1; return REJECT;]
-#|  if (sender's address has 'FREEZESOURCE +' attribute) then
-#|   we accept with the happy face, but place it into a freezer
-#|   [state->always_freeze = 1; return FREEZE;]
-#|  when (sender's address is not in policy-db, continue with sender's domain)
-#|
-#|  if (sender's domain is not in policy-db) then
-#|    return ACCEPT
-#|
-#|  if (sender's domain has 'REJECTSOURCE +' attribute) then
-#|   sender rejected, any further conversation refused
-#|   [state->sender_reject = 1; return REJECT;]
-#|  if (sender's domain has 'FREEZESOURCE +' attribute) then
-#|   we accept with the happy face, but place it into a freezer
-#|   [state->sender_freeze = 1; return FREEZE;]
-#|  if (sender's domain has 'RELAYCUSTOMER +' attribute) then
-#|   DANGER ! DANGER !
-#|   We will accept all destination addresses for this MAIL FROM,
-#|   except those that are explicitely blocked, of course..
-#|   [state->rcpt_nocheck = 1; return ACCEPT;]
-#|  if (sender's domain has 'SENDEROKWITHDNS +' attribute) then
-#|    verify that is DNS data for the target domain.  If yes, return ACCEPT;
-#|    if not, return SOFTREJECT
-#|  if (sender's domain has 'SENDEROKWITHDNS -' attribute) then
-#|    verify that is DNS data for the target domain.  If yes, return ACCEPT;
-#|    if not, return REJECT
-#|  else
-#|    return ACCEPT
-#|
-#| RCPT TO address:
-#|
-#|  if (state->always_reject == 1) return REJECT;
-#|  if (state->sender_reject == 1) return REJECT;
-#|  if (state->always_freeze == 1) return FREEZE;
-#|  if (state->sender_freeze == 1) return FREEZE;
-#|  if (state->always_accept == 1) return ACCEPT;
-#|
-#|  if (recipient address has 'RELAYTARGET +' attribute) then
-#|    return ACCEPT
-#|  if (recipient address has 'RELAYTARGET -' attribute) then
-#|    return REJECT
-#|  if (recipient address has 'FREEZE +' attribute) then
-#|    we accept with the happy face, but place it into a freezer
-#|    [status->sender_freeze = 1; return FREEZE;]
-#|
-#|  if (recipient's domain has 'RELAYTARGET +' attribute) then
-#|    return ACCEPT
-#|  if (recipient's domain has 'RELAYTARGET -' attribute) then
-#|    return REJECT
-#|  if (recipient's domain has 'FREEZE +' attribute) then
-#|    we accept with the happy face, but place it into a freezer
-#|    [status->sender_freeze = 1; return FREEZE;]
-#|
-#|  If (state->rcpt_nocheck  == 1) return ACCEPT;
-#|
-#|  If (recipient's domain has 'ACCEPTIFMX +' attribute) then
-#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
-#|    If not, return SOFTREJECT
-#|  If (recipient's domain has 'ACCEPTIFMX -' attribute) then
-#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
-#|    If not, return REJECT
-#|  If (recipient's domain has 'ACCEPTIFDNS +' attribute) then
-#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
-#|    If not, return SOFTREJECT
-#|  If (recipient's domain has 'ACCEPTIFDNS -' attribute) then
-#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
-#|    If not, return REJECT
-#|  Else
-#|    return ACCEPT
-#| 
-#| ------
-#|
+#|  Further documentation about related files, see file:
+#|       doc/guides/smtp-policy
+#|  See also comments in this file about various sub-options!
 
 #|-----------
 #|
@@ -492,15 +293,29 @@ _rbl1           # Nothing at late phase
 #|   that domain shall have  ``test-rcpt-dns-rbl -'' attribute pair given for
 #|   it at the input datasets -- consider  smtp-policy.mx  file!)
 #|
-#| These rules mean that locally accepted hostnames MUST be listed in
-#| the database with  'relaytarget +' attribute.  ("acceptifmx *" allows
-#| reception if the local system is amonst the MXes.)
-#|
 #|-----------
 #|
 #| If your system has ``whoson'' server (see contrib/whoson-*.tgz),
 #| you can activate it by adding  'trust-whoson +' attribute pair to
 #| the wild-card IP address test:  [0.0.0.0]/0  of your choise.
+#|
+#|-----------
+#|
+#| If you want explicitely to run content-filter even for locally
+#| accepted source IP addresses, you can activate it by adding
+#| 'filtering +' attribute pair to  a)  the wild-card IP address test:
+#|     [0.0.0.0]/0
+#| of your choice above, and  b)  into  _full_rights  further below.
+#|
+#| This attribute pair is looked up only in early connect tests, never
+#| afterwards.   If the attribute pair is not present, tests causing
+#| internal  'always_accept'  flag to be set will disable the lookup
+#| (effectively 'filtering -').
+#|
+#| With 'filtering +' added into  _full_rights,  entering explicite
+#| 'filtering -'  for an address literal in  smtp-policy.relay*  file
+#| will disable the content filtering for given address, while it
+#| is activated for all others.
 #|
 #|-----------
 #|
@@ -534,27 +349,6 @@ _full_rights	rejectnet - relaycustnet + relaytarget +               = _rbl1
 _localnames	rejectnet - relaycustnet - localdomain + relaytarget + = _rbl1
 _relaytarget	relaytarget +                                          = _rbl1
 
-#
-#sztaki.hu		= _full_rights
-#.sztaki.hu		= _full_rights
-#[192.84.225.0]/24	= _our_network
-#[192.84.226.0]/23	= _our_network
-#[192.84.228.0]/23	= _our_network
-#|
-#| ... except that no use to relaying for dial-up hosts
-#|
-#.dial.sztaki.hu		relaytarget - = _full_rights
-#|
-#| ... and we have a misconfigured SMTP client somewhere
-#|
-#[192.84.225.1]/32	message "Your network is not liked message source" rejectnet + = _our_network
-#|
-#|
-#| We are MX for some UUCP nodes;  The actual list of domains should
-#| be gotten from some listing, and inserted here, or generated from
-#| a file into compatible format, and appended into the database
-#|
-#.uucp.iif.hu		relaytarget +
 #|
 #| Thanks, no bulk mails! Drop them when used as sources, also reject
 #| when asked to send for them.
@@ -577,3 +371,224 @@ _bulk_mail	message "Your domain is not liked source for email" rejectsource + me
 #friends@		= _bulk_mail
 
 #----------------------------------
+#| Syntax:
+#|
+#| key	[attribute value]... [= _tag]
+#| 
+#| Where:
+#|
+#| 'key' is 
+#|   - a domain name optionally preceded by a dot (.)
+#|   - "user@" / "user@domain" names.
+#|   - an IP address expression in canonical [nn.nn.nn.nn]/prefix form.
+#|	Unspecified bits must be 0. (Network IPv6 addresses containing
+#|       IPv4-mapped addresses are translated into plain IPv4.)
+#|   - any arbitrary word referred as '_tag' at the right side
+#|     '_tag' may be any key of this database
+#| 'attribute' and 'value' are tokens. They are used by policytest() to
+#|     make decisions.  Attribute names, and understood value tokens are:
+#|
+#|	'='		'_any_token_with_starting_underscore' (aliasing)
+#|	'rejectnet'	{ '+', '-' }
+#|	'freezenet'	{ '+', '-' }
+#|	'rejectsource'	{ '+', '-' }
+#|	'freezesource'	{ '+', '-' }
+#|	'relaycustomer'	{ '+', '-' }
+#|	'relaycustnet'	{ '+', '-' }
+#|	'relaytarget'	{ '+', '-' }
+#|	'freeze'	{ '+', '-' }
+#|	'senderokwithdns' { '+', '-' }
+#|	'acceptifmx'	{ '+', '-' }
+#|	'acceptifdns'	{ '+', '-' }
+#|	'sendernorelay' { '+', '-' }
+#|	'test-dns-rbl'	{ '+', '-', "suffix.one:suffix.two" }
+#|	  Sample suffixes: rbl.maps.vix.com  relays.mail-abuse.org
+#|			   dul.maps.vix.com
+#|			   ok.orbs.org:relays.orbs.org  <-- that is a PAIR!
+#|	'rcpt-dns-rbl'	{ '+', '-', "suffix.one:suffix.two" }
+#|	'test-rcpt-dns-rbl' { '+', '-', "suffix.one:suffix.two" }
+#|	'message'	"quoted constant string message"
+#|	'localdomain'	{ '+', '-' }
+#|	'maxinsize'	nnn
+#|	'maxoutsize'	nnn
+#|	'fulltrustnet'	{ '+', '-' }
+#|	'trustrecipients' { '+', '-' }
+#|	'trust-whoson'	{ '+', '-' }
+#|	'filter'	{ '+', '-' }
+#|
+#| Semantics:
+#|
+#| The policytest() functions called by smtpserver to check the client host,
+#| the sender's and recipients' addresses.  policytest() looks for name, and
+#| address of client host as well as full and partial user address, and domain
+#| part of sender and recipient addresses in this database.  The retrieved
+#| attributes are used to make decissions on acepting or rejecting
+#| the incoming mail.
+#|
+#| If looking for 'foo.bar.edu' and exact match failed, the database looks
+#| keys in sequence:  '.foo.bar.edu', '.bar.edu', '.edu', and '.'.
+#|
+#| The order of entries in this file is indifferent.
+#|
+#| When searching an IP address the entry with the most common (leftside) bits
+#| is returned. So you can have a [0.0.0.0]/0 entry what specifies the default
+#| addributes for all unlisted IP addresses. (Both IPv4 and IPv6)
+#|
+#| '=' is a special attribute.
+#| The notation '= _tag' means "See also at '_tag'". If server() doesn't
+#| find the requested attribute of the object, it will replace object name
+#| with '_tag' and restarts search.
+#| 
+
+#| Here is an example configuration, assumed the following decision
+#| chains of smtpserver/policytest.c routines:
+#|
+#| Connection establishment:  (IP address tested)
+#|
+#|  if (IP address of SMTP client has 'REJECTNET +' attribute) then
+#|   any further conversation refused
+#|   [state->always_reject = 1; return REJECT;]
+#|  if (IP address of SMTP client has 'FREEZENET +' attribute) then
+#|   we present happy face, but always put the messages into a freezer..
+#|   [state->always_freeze = 1; return FREEZE;]
+#|  if (IP address of SMTP client has 'FILTERING' attribute) then
+#|   set  state->content_filter  1/0 depending on '+'/'-' value
+#|   If this attribute doesn't exist, set: state->content_filter = -1
+#|   This will latter interact with  state->always_accept  variable
+#|   in the content-filter interface...
+#|  if (IP address of SMTP client has 'RELAYCUSTNET +' attribute) then
+#|   sender accepted, recipients not checked
+#|   [state->always_accept = 1; return ACCEPT;]
+#|  if (IP address of SMTP client has 'TEST-DNS-RBL +' attribute) then
+#|   we use RealtimeBlockingList DNS database.  If we get match from
+#|   there, we do: [state->always_reject = 1; return REJECT;]
+#|  if (IP address of SMTP client has "RCPT-DNS-RBL" attribute then
+#|   save RBL lookup result for processing at "RCPTO TO:" phase
+#|   [state->rbl_msg = <RBL_LOOKUP_RESULT>;]
+#|  else
+#|   return ACCEPT
+#|
+#| Connection extablishment; connection source DOMAIN test
+#| (This is done on the reverser information of the IP address
+#|  of the session source.)
+#|
+#|  if (state->always_reject == 1) return REJECT;
+#|  if (state->always_freeze == 1) return FREEZE;
+#|  if (state->always_accept == 1) return ACCEPT;
+#|
+#|  if (source domain of address of SMTP client has 'REJECTNET +' attribute) then
+#|   any further conversation refused
+#|   [state->always_reject = 1; return REJECT;]
+#|  if (source domain of of SMTP client has 'FREEZENET +' attribute) then
+#|   we present happy face, but always put the messages into a freezer..
+#|   [state->always_freeze = 1; return FREEZE;]
+#|  if (source domain of SMTP client has 'RCPT-DNS-RBL "_Message' like attributes
+#|   then save it for rejection at rcpt to: phase
+#|   [state->rbl_msg = values[P_A_RcptDnsRBL] + 1;]
+#|  else
+#|   return ACCEPT
+#|
+#| HELO/EHLO parameter string:
+#|
+#|  if (state->always_reject == 1) return REJECT;
+#|  if (state->always_freeze == 1) return FREEZE;
+#|  if (state->always_accept == 1) return ACCEPT;
+#|
+#|  if (HELO-name of SMTP client has 'REJECTNET +' attribute) then
+#|   any further conversation refused
+#|   [state->always_reject = 1; return REJECT;]
+#|  if (HELO-name of SMTP client has 'FREEZENET +' attribute) then
+#|   we present happy face, but always put the messages into a freezer..
+#|   [state->always_freeze = 1; return FREEZE;]
+#|  default: return ACCEPT
+#|
+#| MAIL FROM address:
+#|
+#|  set state->rcpt_nocheck  = 0;
+#|  set state->sender_reject = 0;
+#|  set state->sender_freeze = 0;
+#|
+#|  if (state->always_reject == 1) return REJECT;
+#|  if (state->always_freeze == 1) return FREEZE;
+#|  if (state->always_accept == 1) return ACCEPT;
+#|
+#|  if (sender's address has 'REJECTSOURCE +' attribute) then
+#|   sender rejected, any further conversation refused
+#|   [state->always_reject = 1; return REJECT;]
+#|  if (sender's address has 'FREEZESOURCE +' attribute) then
+#|   we accept with the happy face, but place it into a freezer
+#|   [state->always_freeze = 1; return FREEZE;]
+#|  when (sender's address is not in policy-db, continue with sender's domain)
+#|
+#|  if (sender's domain is not in policy-db) then
+#|    return ACCEPT
+#|
+#|  if (sender's domain has 'REJECTSOURCE +' attribute) then
+#|   sender rejected, any further conversation refused
+#|   [state->sender_reject = 1; return REJECT;]
+#|  if (sender's domain has 'FREEZESOURCE +' attribute) then
+#|   we accept with the happy face, but place it into a freezer
+#|   [state->sender_freeze = 1; return FREEZE;]
+#|  if (sender's domain has 'RELAYCUSTOMER +' attribute) then
+#|   DANGER ! DANGER !
+#|   We will accept all destination addresses for this MAIL FROM,
+#|   except those that are explicitely blocked, of course..
+#|   [state->rcpt_nocheck = 1; return ACCEPT;]
+#|  if (sender's domain has 'SENDEROKWITHDNS +' attribute) then
+#|    verify that is DNS data for the target domain.  If yes, return ACCEPT;
+#|    if not, return SOFTREJECT
+#|  if (sender's domain has 'SENDEROKWITHDNS -' attribute) then
+#|    verify that is DNS data for the target domain.  If yes, return ACCEPT;
+#|    if not, return REJECT
+#|  else
+#|    return ACCEPT
+#|
+#| RCPT TO address:
+#|
+#|  if (state->always_reject == 1) return REJECT;
+#|  if (state->sender_reject == 1) return REJECT;
+#|  if (state->always_freeze == 1) return FREEZE;
+#|  if (state->sender_freeze == 1) return FREEZE;
+#|  if (state->always_accept == 1) return ACCEPT;
+#|
+#|  if (recipient address has 'RELAYTARGET +' attribute) then
+#|    return ACCEPT
+#|  if (recipient address has 'RELAYTARGET -' attribute) then
+#|    return REJECT
+#|  if (recipient address has 'FREEZE +' attribute) then
+#|    we accept with the happy face, but place it into a freezer
+#|    [status->sender_freeze = 1; return FREEZE;]
+#|  if (recipient address has 'TEST-RCPT-DNS-RBL +' attribute) then
+#|    return REJECT if have state->rblmsg
+#|
+#|  if (recipient's domain has 'RELAYTARGET +' attribute) then
+#|    return ACCEPT
+#|  if (recipient's domain has 'RELAYTARGET -' attribute) then
+#|    return REJECT
+#|  if (recipient's domain has 'FREEZE +' attribute) then
+#|    we accept with the happy face, but place it into a freezer
+#|    [status->sender_freeze = 1; return FREEZE;]
+#|
+#|  if (recipient domain has 'TEST-RCPT-DNS-RBL +' attribute) then
+#|    return REJECT if have state->rblmsg
+#|
+#|
+#|  If (state->rcpt_nocheck  == 1) return ACCEPT;
+#|
+#|  If (recipient's domain has 'ACCEPTIFMX +' attribute) then
+#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
+#|    If not, return SOFTREJECT
+#|  If (recipient's domain has 'ACCEPTIFMX -' attribute) then
+#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
+#|    If not, return REJECT
+#|  If (recipient's domain has 'ACCEPTIFDNS +' attribute) then
+#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
+#|    If not, return SOFTREJECT
+#|  If (recipient's domain has 'ACCEPTIFDNS -' attribute) then
+#|    Verify that we are MX for the target domain.  If yes, return ACCEPT;
+#|    If not, return REJECT
+#|  Else
+#|    return ACCEPT
+#| 
+#| ------
+#|
